--- a/html/Contactos.html
+++ b/html/Contactos.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--seo-->
+
+    <meta name="description" content="Contactate con Esteban Gonda">
+    <meta name="author" content="Maximiliano Martinez">
+
     <title>Contactos | Esteban gonda</title>
 
     <!--boostrap-->
@@ -121,7 +127,7 @@
   
     <footer class="contenedor-footer">
         
-      <div class="logo-img">
+      <div class="logo-img-footer">
           <a href="https://www.facebook.com/estebangondaguitarrista" target="_blank"><img src="../img/logo-facebook.png" alt="logo facebook" class="logo-redes"></a>
           <a href="https://www.youtube.com/@EstebanGonda" target="_blank"><img src="../img/logo-youtube.png" alt="logo youtube" class="logo-redes"></a>
           <a href="https://www.instagram.com/estebangonda/" target="_blank"><img src="../img/logo-instragram.png" alt="logo instragram" class="logo-redes"></a>
