--- a/html/Fotos.html
+++ b/html/Fotos.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fotos</title>
+
+    <!--seo-->
+
+    <meta name="description" content="En esta pagina encontraras la biografia de Estaban Gonda.">
+    <meta name="author" content="Maximiliano Martinez">
+
+    <title>Fotos | Esteban Gonda </title>
 
     <!--boostrap-->
 
@@ -131,7 +137,7 @@
   
     <footer class="contenedor-footer">
         
-      <div class="logo-img">
+      <div class="logo-img-footer">
           <a href="https://www.facebook.com/estebangondaguitarrista" target="_blank"><img src="../img/logo-facebook.png" alt="logo facebook" class="logo-redes"></a>
           <a href="https://www.youtube.com/@EstebanGonda" target="_blank"><img src="../img/logo-youtube.png" alt="logo youtube" class="logo-redes"></a>
           <a href="https://www.instagram.com/estebangonda/" target="_blank"><img src="../img/logo-instragram.png" alt="logo instragram" class="logo-redes"></a>
